--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "build": "tailwindcss -i ./styles.css -o ./output.css --minify"
   },
   "devDependencies": {
-    "tailwindcss": "^4.0.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.17"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.0.17"
   }
 }
